vpc/main.tf
terraform {
    backend "s3" {
  bucket         = "zen-infra-project-tfstate-bde3a954"
  key            = "monitoring/terraform.tfstate"
  region         = "us-east-1"
  dynamodb_table = "zen-infra-project-tfstate-locks"
  encrypt        = true
}
    required_providers {
        aws = {
            source = "hashicorp/aws"
        version = "~> 5.0"
                   
        }
    }
} 

variable "region" {
    description = "Set region"
    type = string
    default = "us-east-1"
}

variable "project_name" {
    description = "Namespaces all resources"
    type = string
    default = "zen-infra-project"
}

provider "aws" {
 region = var.region
}


##RESOURCES

#VPC

resource "aws_vpc" "main" {
    cidr_block = "10.0.0.0/16"

    tags = {
        Name = "${var.project_name}-vpc"
    }
}

resource "aws_subnet" "public" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.1.0/24"
    availability_zone = "us-east-1a"
    map_public_ip_on_launch = true

    tags = {
        Name = "${var.project_name}-public-subnet"
    }
}

resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.main.id

    tags = {
        Name = "${var.project_name}-igw"
    }
}


resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.main.id
    }

    tags = {
        Name = "${var.project_name}-public-rt"
    }
}

resource "aws_route_table_association" "public" {
  subnet_id = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

##OUTPUTS

output "vpc_id" {
    value = aws_vpc.main.id
    description = "VPC ID"
}

output "public_subnet_id" {
    value = aws_subnet.public.id
    description = "Public Subnet ID"
}
